Check of logging level on runtime